Bug 171202 - [26.8 CJK] Exporting CJK text to PDF, crash
Summary: [26.8 CJK] Exporting CJK text to PDF, crash
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: high critical
Assignee: Khaled Hosny
URL:
Whiteboard: target:26.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PDF-Export
  Show dependency treegraph
 
Reported: 2026-03-08 08:27 UTC by nobu
Modified: 2026-03-09 03:34 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample ods (18.47 KB, application/vnd.oasis.opendocument.spreadsheet)
2026-03-08 08:28 UTC, nobu
Details
unreadablePDF (70.29 KB, application/pdf)
2026-03-08 10:09 UTC, Saburo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2026-03-08 08:27:09 UTC
Description:
Exporting CJK text to PDF, crash.

Steps to Reproduce:
1. Open new Calc.
2. Insert Text "漢字ひらがな" into Cell [A1].
   or Open sample Calc File.
3. Export to PDF.

Actual Results:
4. Crash, No PDF File.
   Temporary files will remain.

Expected Results:
4. A PDF file will be created.


Reproducible: Always


User Profile Reset: No

Additional Info:

Crash after one second
Reproducible
[2026-03-08]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: bb24b8ec8f8a3bef6efece607479fff9541e30ff
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded

Soon Crash
Reproducible
[2026-03-08]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 66ba77fb2e6be3f954368adf02a40bed8eecfb25
CPU threads: 2; OS: Linux 6.12; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

Soon Crash
[2026-03-08]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 66ba77fb2e6be3f954368adf02a40bed8eecfb25
CPU threads: 2; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

---
No crash
[2026-01-29]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded

No crash
[2026-01-28]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 5a5af7828cbad8607fbb29e26b5131fd852d9384
CPU threads: 2; OS: Linux 6.12; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

No crash
Version: 26.2.1.2 (X86_64)
Build ID: 620(Build:2)
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 1 nobu 2026-03-08 08:28:17 UTC
Created attachment 206005 [details]
Sample ods
Comment 2 Saburo 2026-03-08 09:45:44 UTC
Reproduced by building from source
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: ef4c7f78c33acf98767f7840685ace6ce485a8bf
CPU threads: 4; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Calc: threaded

bibisected with linux-64-26.8 ef131ff8314575535a5cbf7399b322110e91532b is the first bad commit
commit ef131ff8314575535a5cbf7399b322110e91532b
source 76095f9252f8e88e995415ac94ce9920df539086
author	Khaled Hosny <khaled@aliftype.com>

Use HarfBuzz subsetter to subset fonts for PDF

This gives us a more up-to-date subsetter and would allow dropping most
of our low-level, CVE-happy, font subsetting code.

Update required HarfBuzz version to the version that provides all new
APIs we are now using.

Change-Id: I774ddf4f7af448a3cf17b64f89e8b1f36097775a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/199572
***
adding CC: Khaled Hosny
please, take a look?
Comment 3 Saburo 2026-03-08 10:09:02 UTC
Created attachment 206006 [details]
unreadablePDF

In some cases, the program does not crash, but the output PDF is unreadable.
Comment 4 Commit Notification 2026-03-08 23:12:52 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/501cd23eae78987630d215f560c937774b1d4d8c

tdf#171202: Fix subsetting CFF table with sub routines

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 nobu 2026-03-09 03:34:35 UTC
Saburo , Khaled Hosny , It's an astonishingly quick collaboration.
Thank you.

No crash.
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 501cd23eae78987630d215f560c937774b1d4d8c
CPU threads: 2; OS: Linux 6.12; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Calc: threaded

> In some cases, the program does not crash, but the output PDF is unreadable.

This may also be fixed, but confirmation will take time.