tdf#171202: Fix subsetting CFF table with sub routines

Work around HarfBuzz bug[1] in subsetting CFF table with subroutines by
requesting HarfBuzz de-subroutinize the table.

1: https://github.com/harfbuzz/harfbuzz/issues/5799
Change-Id: I3f7704b57222a7bb73587dcb5eb3884fbb5b224a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/201227
Tested-by: Jenkins
Reviewed-by: Khaled Hosny <khaled@libreoffice.org>